syntax = "proto3";

package proto;

option go_package = "venomlab-aes-plugin/sdk/proto";

// ShellcodeData rappresenta shellcode
message ShellcodeData {
  bytes bytes = 1;
  bool is_encoded = 2;
  string encoding_technique = 3;
  bytes key = 4;
  map<string, string> metadata = 5;
}

// SourceCodeData rappresenta codice sorgente
message SourceCodeData {
  map<string, string> files = 1;      // filename -> content
  string language = 2;
  map<string, string> metadata = 3;
}

// BinaryData rappresenta un binario
message BinaryData {
  bytes data = 1;
  string platform = 2;
  string arch = 3;
  map<string, string> metadata = 4;
}

// NodeData Ã¨ un wrapper per qualsiasi tipo di dato
message NodeData {
  oneof data {
    ShellcodeData shellcode = 1;
    SourceCodeData source_code = 2;
    BinaryData binary = 3;
  }
}

//TODO: i tipi vanno estesi a tutti i tipi interscambiabili tra i nodi
